@@ -410,8 +410,16 @@ function remove_template_dir($dir) {
 function theme($new = null, $in_db = true) {
 	global $ps;
 	if (empty($new)) {
-		return $this->theme;
-	} elseif ($this->is_theme($new)) {
+		if (defined("PSYCHOSTATS_ADMIN_PAGE") or defined("PSYCHOSTATS_INSTALL_PAGE")) return $this->theme;
+		if ($this->cms->session->options['theme']) {
+			$new = $this->cms->session->options['theme'];
+		} elseif ($ps->conf->main['theme']) {
+			$new = $ps->conf->main['theme'];
+		} else {
+		$new = 'default';
+		}
+	}
+	if ($this->is_theme($new)) {
 		$loaded = false;
 		// load the theme from the database if possible
 		$ps_installed = $this->cms->db->table_exists($this->cms->db->table('config_themes'));
